manifests/backend-application.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 239044943724.dkr.ecr.ap-south-1.amazonaws.com/todo-backend:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: backend-storage
          mountPath: /app/data  # Update this path to where SQLite DB is saved
      volumes:
      - name: backend-storage
        persistentVolumeClaim:
          claimName: backend-pvc
