manifests/frontend-application.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 239044943724.dkr.ecr.ap-south-1.amazonaws.com/todo-frontend:latest
        ports:
        - containerPort: 3000
